#721: Added Warehouse mutations